--- a/sample-super-rx-ai-kotlin/build.gradle
+++ b/sample-super-rx-ai-kotlin/build.gradle
@@ -26,6 +26,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
