--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ task clean(type: Delete) {
 
 ext {
     releaseVersionCode = 4
-    releaseVersionName = '1.3.0-alpha'
+    releaseVersionName = '1.3.1-rx2-alpha'
 
     minSdkVersion = 16
     targetSdkVersion = 25
