--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.0'
+    ext.kotlin_version = '1.1.1'
     repositories {
         jcenter()
         mavenCentral()
@@ -13,7 +13,7 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.3.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -32,14 +32,16 @@ task clean(type: Delete) {
 }
 
 ext {
+    groupNameAndArtifactPrefix ='com.mateuszkoslacz.moviper:moviper-'
+
     releaseVersionCode = 4
-    releaseVersionName = '1.3.1-rx2-alpha'
+    releaseVersionName = '1.4.0-rx2-prealpha'
 
     minSdkVersion = 16
     targetSdkVersion = 25
     compileSdkVersion = 25
     buildToolsVersion = '25.0.2'
-    supportVersion = '25.1.1'
+    supportVersion = '25.3.0'
     mosbyVersion = '2.0.1'
     rxJavaVersion = '2.0.3'
     rxAndroidVersion = '2.0.1'
