--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.3.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
@@ -41,14 +41,15 @@ ext {
     targetSdkVersion = 25
     compileSdkVersion = 25
     buildToolsVersion = '25.0.2'
-    supportVersion = '25.3.0'
+    supportVersion = '25.3.1'
     mosbyVersion = '2.0.1'
     rxJavaVersion = '2.0.8'
     rxAndroidVersion = '2.0.1'
-    databindingVersion = '1.2.1'
+    databindingVersion = '1.3.1'
     rxBindingVersion = '1.0.0'
-    butterKnifeVersion = '8.4.0'
+    butterKnifeVersion = '8.5.1'
     retrofitVersion = '2.0.2'
+    retrofitRxVersion = '1.0.0'
     okHttpVersion = '3.2.0'
     glideVersion = '3.7.0'
     robolectricVersion = '3.2-rc1'
