--- a/sample-independent-viper/build.gradle
+++ b/sample-independent-viper/build.gradle
@@ -40,10 +40,10 @@ dependencies {
 
     compile 'com.squareup.retrofit2:retrofit:' + rootProject.ext.retrofitVersion
     compile 'com.squareup.retrofit2:converter-gson:' + rootProject.ext.retrofitVersion
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:' + rootProject.ext.retrofitRxVersion
     compile 'com.squareup.okhttp3:logging-interceptor:' + rootProject.ext.okHttpVersion
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile "com.github.akarnokd:rxjava2-interop:0.9.1"
+    compile 'io.reactivex.rxjava2:rxandroid:' + rootProject.ext.rxAndroidVersion
+    compile "com.github.akarnokd:rxjava2-interop:0.9.5"
     compile 'io.reactivex.rxjava2:rxjava:' + rootProject.ext.rxJavaVersion
 
 
