--- a/sample-recyclerview/build.gradle
+++ b/sample-recyclerview/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:' + rootProject.ext.rxAndroidVersion
     compile 'com.squareup.retrofit2:retrofit:' + rootProject.ext.retrofitVersion
     compile 'com.squareup.retrofit2:converter-gson:' + rootProject.ext.retrofitVersion
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:' + rootProject.ext.retrofitRxVersion
     compile 'com.squareup.okhttp3:logging-interceptor:' + rootProject.ext.okHttpVersion
     compile project(path: ':moviper-rx')
     compile project(path: ':moviper-recyclerview')
