--- a/moviper3/build.gradle
+++ b/moviper3/build.gradle
@@ -26,8 +26,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:support-v4:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.0.2'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.hannesdorfmann.mosby3:mvp:3.1.0'
+    compile "io.reactivex.rxjava2:rxjava:2.1.7"
 }
 repositories {
     mavenCentral()
