--- a/moviper3/build.gradle
+++ b/moviper3/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile "org.mockito:mockito-core:2.13.0"
+    testCompile "com.nhaarman:mockito-kotlin:1.5.0"
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:support-v4:27.0.2'
     compile 'com.android.support:appcompat-v7:27.0.2'
@@ -32,6 +34,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.hannesdorfmann.mosby3:mvp:3.1.0'
     compile "io.reactivex.rxjava2:rxjava:2.1.7"
+    compile 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    compile 'com.akaita.java:rxjava2-debug:1.2.2'
+
+
 }
 repositories {
     mavenCentral()
