--- a/moviper3/build.gradle
+++ b/moviper3/build.gradle
@@ -26,7 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile "org.mockito:mockito-core:2.13.0"
-    testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+    testCompile("com.nhaarman:mockito-kotlin:1.5.0", {
+        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+    })
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:support-v4:27.0.2'
     compile 'com.android.support:appcompat-v7:27.0.2'
